...
  "Dynamic",
  "Dynamic SOCKS5",
  "E2E",
  "ECDSA P-256",
  "ERR",
  "Ed25519 (recommended)",
  "Edit",
  "Edit Bucket",
  "Edit Port Forward Rule",
  "Edit credentials",
  "Edit host",
  "Edit rule",
  "Empty directory",
...
  "More",
  "Move",
  "Move to Group",
  "Moved {0} credential(s) into the {1}.",
  "Must be an absolute path",
  "NAME",
  "NEW HOST",
  "NEW RULE",
  "NEW SNIPPET",
  "NLA (CredSSP)",
  "Name",
  "Namespace",
  "Network Stats Monitor",
...
